Add data connection from content script to background script. Add connection from background script to server (socket.io). Add socket.io library. Add package.json for Node.js.

--- a/manifest.json
+++ b/manifest.json
@@ -14,10 +14,16 @@
 				"http://*.netflix.com/*",
 				"https://*.netflix.com/*"
 			],
-			"js" : ["lib/jquery.min.js", "index.js"]
+			"js" : [
+				"lib/jquery.min.js",
+				"index.js"
+			]
 		}
 	],
 	"background" : {
-		"scripts" : ["background.js"]
+		"scripts" : [
+			"lib/socket.io.js",
+			"background.js"
+		]
 	}
 }
