--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "bower": "^1.7.9",
     "hiredis": "^0.4.1",
     "redis-connection": "^4.0.3",
     "socket.io": "^1.4.5"
