--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,9 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "jasmine-core": "^2.4.1"
+  }
 }
